--- a/src/components/pages/users/admin/addUser/AddUser.css
+++ b/src/components/pages/users/admin/addUser/AddUser.css
@@ -163,3 +163,23 @@
     min-width: 14rem;
   }
 } */
+
+.popup {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.5);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.popup-content {
+  background: #fff;
+  padding: 20px;
+  border-radius: 8px;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+  text-align: center;
+}
